--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:support-vector-drawable:25.3.0'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.4.1'
     testCompile 'junit:junit:4.12'
 }
