--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:launchMode="singleTask"
-            android:label="@string/app_name">
+            android:name=".view.MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.mainpage.SearchLinkedSceneActivity"
-            android:parentActivityName=".MainActivity">
+        <activity
+            android:name=".view.mainpage.SearchLinkedSceneActivity"
+            android:parentActivityName=".view.MainActivity">
+        </activity>
+        <activity
+            android:name=".view.scene.SceneActivity"
+            android:parentActivityName=".view.MainActivity"
+            android:label="@string/title_activity_scene"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
